@@ -1,7 +1,6 @@
-EMULATION_NAME=i386linux
 SCRIPT_NAME=aout
 OUTPUT_FORMAT="a.out-i386-linux"
 PAGE_SIZE=0x1000
-TEXT_START_ADDR=0
-NONPAGED_TEXT_START_ADDR=0x1000
+TEXT_START_ADDR=0x1020
+NONPAGED_TEXT_START_ADDR=0x20
 ARCH=i386
