@@ -1,3 +1,8 @@
+Tue Jun 14 18:05:09 1994  Eric Youngdale  (ericy@cais.cais.com)
+
+	* emulparams/i386linux.sh (TEXT_START_ADDR): Define as 0x1000.
+	(NONPAGED_TEXT_START_ADDR): Define as 0x20.
+
 Mon Jun 13 15:46:09 1994  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)
 
 	* scripttempl/alpha.sc: Define _ftext, _etext and _fdata insted of
